@@ -8,7 +8,7 @@
 /* ************************************************************************ */
 
 #ifndef lint
-static char *rcs_version = "$Id: blalloc.c,v 1.4 1998/12/11 05:00:15 db Exp $";
+static char *rcs_version = "$Id: blalloc.c,v 1.5 1999/02/01 05:45:56 db Exp $";
 #endif
 
 /* ------------------------------------------------------------------------ */
@@ -295,7 +295,8 @@ int BlockHeapFree(BlockHeap *bh, void *ptr)
 #if defined(USE_SYSLOG) && defined(SYSLOG_BLOCK_ALLOCATOR)
 	      syslog(LOG_DEBUG,"blalloc.c bit already clear in map!");
 #endif
-	      sendto_ops("blalloc.c bit already clear in map!");
+	      sendto_ops("blalloc.c bit already clear in map! elemSize %d",
+			 bh->elemSize);
 	      sendto_ops("Please report to the hybrid team! ircd-hybrid@the-project.org");
 	    }
 	  else
